# payment-processor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 2026_04_21_0101-3d021425ea43_init_payments_and_outbox.py
src/payment_processor/: broker.py  main.py  relay.py  worker.py
src/payment_processor/core/: config.py  enums.py  exception_handlers.py  exceptions.py  logging.py  security.py
src/payment_processor/database/: router.py  session.py
src/payment_processor/messaging/: broker.py
src/payment_processor/outbox/: enums.py  models.py  relay.py  repository.py
src/payment_processor/payments/: consumer.py  deps.py  enums.py  events.py  exceptions.py  gateway.py  models.py  repository.py  router.py  schemas.py  service.py  webhook.py
tests/: conftest.py
tests/e2e/: test_e2e.py
tests/integration/: test_api.py
tests/unit/: test_consumer.py  test_gateway.py  test_payment_service.py
