[project]
name = "payment_processor"
version = "0.1.0"
description = ""
authors = [
    {name = "Nick"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "faststream (>=0.6.7,<0.7.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "greenlet (>=3.4.0,<4.0.0)"
]

[tool.poetry]
packages = [{ include = "payment_processor", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
