[project]
name = "payment_processor"
version = "0.1.0"
description = ""
authors = [
    {name = "Nick"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi (>=0.136.0,<0.137.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "faststream[rabbit] (>=0.6.7,<0.7.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "uvicorn[standard] (>=0.44.0,<0.45.0)",
]

[tool.poetry]
packages = [{ include = "payment_processor", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.15.11,<0.16.0"
pre-commit = ">=4.5.1,<5.0.0"
pytest = ">=8.3.0,<9.0.0"
pytest-asyncio = ">=0.24.0,<1.0.0"

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["src"]
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (неиспользуемые импорты и т.п.)
    "I",      # isort (сортировка импортов)
    "N",      # pep8-naming
    "UP",     # pyupgrade (переход на новый синтаксис)
    "B",      # bugbear (типичные баги)
    "ASYNC",  # async-специфичные проверки
    "S",      # bandit (security)
    "C4",     # comprehensions
    "SIM",    # simplify
    "RUF",    # ruff-специфичные
    "TCH",    # type-checking
    "PIE",    # misc lints
    "RET",    # return statements
    "T20",    # print statements
]
ignore = [
    "E501",   # line too long
    "S101",   # assert (тесты)
    "B008",   # FastAPI Depends/Header
    "RUF001",  # ambiguous-unicode-character-string
    "RUF002",  # ambiguous-unicode-character-docstring
    "RUF003",  # ambiguous-unicode-character-comment
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]  # assert и хардкод паролей в тестах
"migrations/versions/*.py" = ["I001", "N999"]  # alembic-style миграции

[tool.ruff.lint.isort]
known-first-party = ["payment_processor"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-m 'not e2e'"
markers = [
    "e2e: end-to-end тесты поверх docker compose; запускать через `pytest -m e2e`",
]
